// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-disableElevation"
    role="group"
  />
</div>
`;

exports[`ButtonGroup ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiButtonGroup-root MuiButtonGroup-disableElevation"
    role="group"
  />
</div>
`;
